Update Next.js to latest version to fix security vulnerability

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
-    "next": "canary",
-    "react": "rc",
-    "react-dom": "rc",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.4.1",
     "resend": "^4.7.0",
     "tailwind-merge": "^2.4.0",
